k8s/namespace.yml
kind: Namespace
apiVersion: v1
metadata:
  name: backend-deployment
  namespace: chat-app

spec:
  replicas: 1
  selector:
