k8s/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chatapp-backend-deployment
  namespace: chat-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chatapp-backend
  template:
    metadata:
      labels:
        app: chatapp-backend
    spec:
      containers:
        - name: chatapp-backend-cont
          image: gendocker314/chatapp-service:latest
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 5001
