k8s/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chatapp-frontend-deployment
  namespace: chat-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chatapp-frontend
  template:
    metadata:
      name: chatapp-frontend-pod
      namespace: chat-app
      labels:
        app: chatapp-frontend
    spec:
      containers:
        - name: chatapp-frontend-cont
          image: gendocker314/chatapp-client:latest
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 80
