k8s/mongodb-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb-statefulset
  namespace: chat-app
spec:
  selector:
    matchLabels:
      app: mongodb
  serviceName: mongo-svc
  replicas: 1
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongodb-cont
          image: mongo:latest
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-data
              mountPath: /data/db # Important for MongoDB
      volumes:
        - name: mongo-data
          persistentVolumeClaim:
            claimName: mongo-pvc
