k8s/backend-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: chatapp-backend-svc
  namespace: chat-app
spec:
  selector:
    app: chatapp-backend
  ports:
    - protocol: TCP
      port: 5001
      targetPort: 5001
