k8s/frontend-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: chatapp-frontend-svc
  namespace: chat-app
spec:
  selector:
    app: chatapp-frontend
  ports:
    - port: 80
      targetPort: 80
