k8s/mongodb-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo-svc
  namespace: chat-app
spec:
  selector:
    app: mongodb
  ports:
    - port: 27017
      targetPort: 27017
